Fix dropdown alignments and add missing status icons

--- a/static/less/results.less
+++ b/static/less/results.less
@@ -379,6 +379,10 @@ header.results-label h3 {
 .datetime-picker {
   display: inline-block;
 
+  span {
+    line-height: 22px !important;
+  }
+
   [class^="icon-"] {
     font-size: 18px;
     color: @gray4;
