--- a/static/less/scaffolding.less
+++ b/static/less/scaffolding.less
@@ -68,6 +68,12 @@
   }
 }
 
+.dropdown.borderless .dropdown-toggle span {
+  line-height: 28px;
+  display:inline-block;
+  vertical-align: top;
+}
+
 #site-nav {
   margin-right: 45px;
   position: absolute;
@@ -106,11 +112,6 @@
       display: block;
     }
   }
-}
-
-#go-live-menu {
-  text-align: center;
-  width: 150px;
 }
 
 #login-menu {
